# EigenSiNN

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: buildruntests.yml
core/: CMakeLists.txt  CMakeSettings.json
core/eigen/Eigen/src/Core/arch/CUDA/: Half.h
core/eigen/Eigen/src/Core/util/: DisableStupidWarnings.h
core/eigen/unsupported/Eigen/CXX11/src/Tensor/: TensorContractionCuda.h  TensorDeviceCuda.h  TensorReductionCuda.h
core/nn/: CMakeLists.txt
core/nn/src/: RNG.h
core/nn/src/EigenTensor/: tensor.hpp
core/nn/src/cudnn/: common.hpp  context.hpp  cudnn_activations.hpp  cudnn_pooling.hpp  cudnn_tensor_desc.hpp  cudnn_workspace.hpp  device.hpp  helper.hpp
core/nn/src/device/: device_convolutions.hpp  device_helpers.hpp  device_maxpool.hpp  device_portable.hpp  device_tensor.hpp  device_wrapper.hpp  dispatcher.hpp  helper.h  tensor_adapter.hpp  tensor_adaptor.hpp  tensor_view.hpp
core/nn/src/gpu/: gpu_tensor.hpp  helper.h  tensor.hpp
core/nn/src/helpers/: conv_params_bag.hpp  cudnn_helpers.hpp  cudnn_workspace.hpp
core/nn/src/layers/: all.hpp  batchnorm.hpp  convolution.hpp  convolution_cudnn.hpp  convolution_def.hpp  convolutiontrans.hpp  dropout.hpp  flatten.hpp  image_input.hpp  input.hpp  layer_base.hpp  linear.hpp  maxpooling.hpp  maxpoolinglayer.hpp  poolinglayer.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
core/nn/src/layers/operations/: add.hpp  concat.hpp
core/nn/src/losses/: all.hpp  crossentropyloss.hpp  loss_base.hpp  mse.hpp
core/nn/src/network/: cifar10_graph.hpp  cifar10_network.hpp  network.hpp  network_graph.hpp  persistent_network.hpp
core/nn/src/onnx/: common.h  loader.h  model.h  onnx.proto3.pb.cc  onnx.proto3.pb.h  op_defs.h  supported_layers.h
core/nn/src/ops/: batchnorm.hpp  comparisons.hpp  conversions.hpp  convolutions.hpp  im2col.hpp  initializations.hpp  maxpoolingops.hpp  opsbase.hpp  poolingops.hpp  relu.hpp  threadingdevice.hpp
core/nn/src/optimizers/: adam.hpp  all.hpp  optimizer_base.hpp  sgd.hpp
core/nn/src/tensor/: nntensor.hpp
core/nn/test/: adam_colmajor_test.cpp  adam_rowmajor_test.cpp  adam_test.cpp  add_test.cpp  batchnorm4d_test.cpp  batchnorm_test.cpp  boost_graph_test.cpp  concat_test.cpp  convlayer_colmajor_test.cpp  convlayer_cudnn_test.cu  convlayer_gpu_colmajor_test.cu  convlayer_gpu_rowmajor_test.cu  convlayer_gpu_test.cu  convlayer_gpu_test.cu_  convlayer_rowmajor_test.cpp  convlayer_test.cpp  convlayer_trans_cudnn_test.cu  convlayer_trans_gpu_test.cu  convlayer_trans_test.cpp  convolve_test.cpp  cuda_device_test.cu  cudnn_test.cu  device_tensor_gpu_test.cu  device_tensor_test.cpp  dropout_test.cpp  flatten_test.cpp  gpu_alloc_test.cu  gpu_device_tensor_test.cu  linear_colmajor_test.cpp  linear_gpu_test.cu  linear_rowmajor_test.cpp  linear_test.cpp  linearlayer_test.cpp  losses_colmajor_test.cpp  losses_rowmajor_test.cpp  losses_test.cpp  maxpooling2d_gpu_test.cu  maxpooling2d_rowmajor_test.cpp  maxpooling2d_test.cpp  maxpooling4d_colmajor_test.cpp  (+29 more)
core/nn/test/include/: cifar10_network.hpp  commondata2d.hpp  commondata4d.hpp  convdata4d.hpp  datacontainer.hpp  reludata4d.hpp  testutils.hpp
networks/: CMakeLists.txt
networks/cifar/: CMakeLists.txt  CMakeSettings.json
networks/cifar/include/: cifar10_graph.hpp  cifar10_network.hpp  cifar10_reader.hpp  dataset.h  helpers.h  network.h
networks/cifar/src/: dataset.cpp  main.cpp  main.cu  main.hpp  move_network.cpp
networks/simple-mnist/: CMakeLists.txt  CMakeSettings.json
networks/simple-mnist/include/: dataset.h  network.h
networks/simple-mnist/src/: dataset.cpp  main.cpp
nn/: CMakeLists.txt
nn/src/: Random.h  dummy.cpp  dummy.h  input.hpp  layer_base.hpp  linear.hpp
nn/src/layers/: batchnorm.hpp  convolution.hpp  input.hpp  layer_base.hpp  linear.hpp  poolinglayer.hpp
nn/src/ops/: batchnorm.hpp  conversions.hpp  convolutions.hpp  linearops.hpp  opsbase.hpp  poolingops.hpp
nn/test/: batchnorm_test.cpp  convlayer_test.cpp  convolve_test.cpp  dummytest.cpp  linear_test.cpp  linearlayer_test.cpp  pooling_test.cpp  tensortest.hpp
protobuf/install/cmake/: protobuf-config-version.cmake  protobuf-targets.cmake
protobuf/install/lib/: libprotobuf-lite.lib
protobuf/install/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
python/: python.pyproj  python.sln
python/layers/: batchhorm2d.py  batchnorm4d.py  commondata4d.py  convolutions3d.py  convolutions3d_experiments.py  convolutions3dtransposed.py  convolve.py  fullyconnected.py  im2col.py  maxpooling2d.py  maxpooling4d.py  relu.py  relu3d.py  sigmoid.py  sigmoid4d.py  softmax.py  tanh.py  tanh4d.py  utils.py
python/layers/tstcommon/: commondata2d.py  commondata4d.py
python/losses/: crossentropy.py  mse.py  utils.py
python/losses/tstcommon/: commondata2d.py
python/optimizers/: adam_gen copy.py  adam_gen.py  sgd.py
python/testgen/: batchhorm.py  batchnorm4d.py  commondata2d.py  commondata4d.py  convolutions3d.py  fullyconnected.py  im2col.py  maxpooling2d.py  maxpooling4d.py  pooling.py  relu.py  utils.py
python/tools/: Compare_Row_Col_Major.ipynb
python/tstcommon/: commondata2d.py  commondata4d.py
